--- a/config/live_canary_baseline.env
+++ b/config/live_canary_baseline.env
@@ -4,6 +4,8 @@
 # Hard safety latches
 LIVE_ORDER_POSTING_ENABLED=false
 LIVE_TRADING_ENABLED=false
+ENABLE_XRP_STRATEGIES=false
+ENABLE_ONE_MINUTE_STRATEGIES=false
 MODEL_PROBABILITY_GATE_ENFORCE_LIVE=true
 MODEL_PROBABILITY_GATE_REQUIRE_MODEL=true
 INTELLIGENCE_GATE_ENABLED=true
@@ -71,6 +73,19 @@ POLY_LIVE_ORDER_TYPE=FOK
 BTC_5M_MIN_EXPECTED_NET_RETURN=0.008
 BTC_5M_MAX_POSITION_FRACTION=0.10
 BTC_5M_MAX_ENTRY_SPREAD=0.05
+BTC_5M_MAX_SPOT_AGE_MS=1200
+BTC_5M_MAX_BOOK_AGE_MS=900
+BTC_5M_LIVE_PREVIEW_COOLDOWN_MS=900
+BTC_5M_IV_BLEND_WEIGHT=0.65
+BTC_5M_IV_MAX_STALE_MS=90000
+BTC_5M_DIVERGENCE_MIN_FLOOR=0.03
+BTC_5M_DIVERGENCE_SPREAD_MULT=0.40
+BTC_5M_DIVERGENCE_VOL_MULT=0.30
+BTC_5M_DIVERGENCE_UNCERTAINTY_BPS=12
+DERIBIT_IV_REFRESH_MS=10000
+DERIBIT_IV_HTTP_TIMEOUT_MS=4000
+DERIBIT_IV_MAX_SPOT_AGE_MS=15000
+DERIBIT_IV_MIN_SAMPLES=4
 
 # Optional phased allowlist (when LIVE_ORDER_POSTING_ENABLED=true)
 POLY_LIVE_STRATEGY_ALLOWLIST=BTC_5M,BTC_15M,ETH_5M,ETH_15M,SOL_5M,SOL_15M,ATOMIC_ARB,GRAPH_ARB
@@ -81,3 +96,6 @@ SOAK_MIN_PREFLIGHT_PASS_RATE_PCT=96
 SOAK_MAX_SHORTFALL_BLOCK_RATE_PCT=18
 SOAK_MAX_NETTING_BLOCK_RATE_PCT=12
 SOAK_MIN_EDGE_CAPTURE_RATIO=0.55
+SOAK_MIN_NET_PNL_USD=0
+SOAK_MAX_REJECT_RATE_PCT=20
+SOAK_MAX_STALE_FORCED_CLOSES=0
