--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,9 @@ COINBASE_WS_URL=wss://advanced-trade-ws.coinbase.com
 LIVE_ORDER_POSTING_ENABLED=false
 # Legacy alias still respected by backend executor.
 LIVE_TRADING_ENABLED=false
+# Optional strategy coverage flags (backend/scanner must match)
+ENABLE_XRP_STRATEGIES=false
+ENABLE_ONE_MINUTE_STRATEGIES=false
 # Local path for persisted strategy trade dataset used by validation harness.
 STRATEGY_TRADE_LOG_PATH=logs/strategy_trades.csv
 # Local path for persisted rejected-signal events (intelligence/model/preflight/live/settlement).
@@ -144,6 +147,31 @@ BTC_5M_MODEL_SIGNAL_MIN_AUC=0.52
 BTC_5M_MODEL_SIGNAL_MAX_LOGLOSS=0.72
 BTC_5M_MODEL_SIGNAL_MAX_BRIER=0.28
 
+# BTC_5M latency + divergence + IV pricing
+BTC_5M_MAX_SPOT_AGE_MS=1200
+BTC_5M_MAX_BOOK_AGE_MS=900
+BTC_5M_LIVE_PREVIEW_COOLDOWN_MS=900
+BTC_5M_IV_BLEND_WEIGHT=0.65
+BTC_5M_IV_MAX_STALE_MS=90000
+BTC_5M_DIVERGENCE_MIN_FLOOR=0.03
+BTC_5M_DIVERGENCE_SPREAD_MULT=0.40
+BTC_5M_DIVERGENCE_VOL_MULT=0.30
+BTC_5M_DIVERGENCE_UNCERTAINTY_BPS=12
+DERIBIT_IV_REFRESH_MS=10000
+DERIBIT_IV_HTTP_TIMEOUT_MS=4000
+DERIBIT_IV_MAX_SPOT_AGE_MS=15000
+DERIBIT_IV_MIN_SAMPLES=4
+
+# Example market-neutral (5m/15m) divergence controls
+ETH_5M_DIVERGENCE_MIN_FLOOR=0.025
+ETH_5M_DIVERGENCE_SPREAD_MULT=0.35
+ETH_5M_DIVERGENCE_VOL_MULT=0.25
+ETH_5M_DIVERGENCE_UNCERTAINTY_BPS=12
+ETH_15M_DIVERGENCE_MIN_FLOOR=0.018
+ETH_15M_DIVERGENCE_SPREAD_MULT=0.30
+ETH_15M_DIVERGENCE_VOL_MULT=0.20
+ETH_15M_DIVERGENCE_UNCERTAINTY_BPS=10
+
 # Portfolio meta-allocator + execution preparation controls
 META_ALLOCATOR_ENABLED=true
 META_ALLOCATOR_META_BLEND=0.65
@@ -167,3 +195,6 @@ SOAK_MIN_PREFLIGHT_PASS_RATE_PCT=96
 SOAK_MAX_SHORTFALL_BLOCK_RATE_PCT=18
 SOAK_MAX_NETTING_BLOCK_RATE_PCT=12
 SOAK_MIN_EDGE_CAPTURE_RATIO=0.55
+SOAK_MIN_NET_PNL_USD=0
+SOAK_MAX_REJECT_RATE_PCT=20
+SOAK_MAX_STALE_FORCED_CLOSES=0
