feat: consolidate go-live hardening, execution safety, alpha overlays, and ops automation

--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,47 @@
 PORT=5114
 NODE_ENV=development
 FRONTEND_URL=http://100.83.153.43:3112
+LOG_LEVEL=info
+LOG_MAX_SIZE_BYTES=20971520
+LOG_MAX_FILES=10
 
 # Database
-DATABASE_URL=postgres://postgres:postgres@localhost:5544/ai_trader
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=replace_with_strong_postgres_password
+POSTGRES_DB=ai_trader
+DATABASE_URL=postgres://postgres:replace_with_strong_postgres_password@localhost:5544/ai_trader
 
 # Redis
-REDIS_URL=redis://localhost:6491
+REDIS_PASSWORD=replace_with_strong_redis_password
+REDIS_URL=redis://:replace_with_strong_redis_password@localhost:6491
+REDIS_BACKUP_INTERVAL_SEC=300
+REDIS_BACKUP_KEEP=288
+# Optional off-host snapshot target (requires aws cli creds if using s3://).
+REDIS_BACKUP_S3_URI=
+REDIS_BACKUP_S3_RETRIES=3
+REDIS_BACKUP_S3_RETRY_DELAY_SEC=3
+POSTGRES_BACKUP_INTERVAL_SEC=900
+POSTGRES_BACKUP_KEEP=168
+POSTGRES_BACKUP_S3_URI=
+POSTGRES_BACKUP_S3_RETRIES=3
+POSTGRES_BACKUP_S3_RETRY_DELAY_SEC=3
+AWS_REGION=us-east-1
 
 # JWT
 JWT_SECRET=replace_with_secure_secret_key
 # Control plane auth token (required for any mutating action)
 CONTROL_PLANE_TOKEN=replace_with_long_random_secret
+# Read-only API auth token for GET /api/* endpoints.
+READ_API_TOKEN=replace_with_long_random_read_token
+API_READ_AUTH_REQUIRED=true
+
+# CORS allowlist (comma-separated exact origins). Leave empty to use localhost + FRONTEND_URL.
+CORS_ALLOWED_ORIGINS=
+# Optional compatibility mode for private-network UI hosts.
+CORS_ALLOW_PRIVATE_IP_ORIGINS=false
+# Explicit allowlist of private-IP UI origins (no wildcards), e.g. Tailscale:
+# CORS_ALLOWED_PRIVATE_IP_ORIGINS=http://100.83.153.43:3112
+CORS_ALLOWED_PRIVATE_IP_ORIGINS=
 
 # Coinbase API (Required for Market Data & Execution)
 COINBASE_API_KEY=your_coinbase_api_key
@@ -36,6 +66,9 @@ STRATEGY_TRADE_LOG_PATH=logs/strategy_trades.csv
 REJECTED_SIGNAL_LOG_PATH=logs/rejected_signals.jsonl
 # If true, reset validation dataset whenever simulation bankroll/PnL is reset.
 RESET_VALIDATION_TRADES_ON_SIM_RESET=true
+# If true, also wipes feature-registry/ML training history on simulation reset.
+# Keep false during PAPER soak to preserve labeled data across resets.
+RESET_FEATURE_REGISTRY_ON_SIM_RESET=false
 
 # Paper Simulation Cost Model (basis points per side)
 SIM_FEE_BPS_PER_SIDE=10
@@ -53,13 +86,29 @@ POLY_CHAIN_ID=137
 POLY_SIGNATURE_TYPE=1
 # Reuse same keys for Rust scanner + backend preflight signer.
 PRIVATE_KEY=0x...
+POLY_PRIVATE_KEY=0x...
 PROXY_WALLET_ADDRESS=0x...
+POLY_FUNDER_ADDRESS=0x...
+POLY_LIVE_STRATEGY_ALLOWLIST=BTC_5M,ETH_5M,SOL_5M
 POLY_PREFLIGHT_MIN_INTERVAL_MS=1200
 POLY_PREFLIGHT_RETRY_ON_ERROR=false
 # Backend live-post safety ceilings (USD notional)
 POLY_MAX_ORDER_NOTIONAL_USD=500
 POLY_MAX_SIGNAL_NOTIONAL_USD=2000
 POLY_EXECUTION_MIN_INTERVAL_MS=2500
+POLY_CLOB_CALL_TIMEOUT_MS=8000
+POLY_INIT_RETRY_COOLDOWN_MS=15000
+POLY_EXECUTION_SLIPPAGE_CHECK_ENABLED=true
+POLY_EXECUTION_SLIPPAGE_MAX_BPS=45
+POLY_EXECUTION_SLIPPAGE_MIN_ABS=0.008
+POLY_EXECUTION_DEPTH_CHECK_ENABLED=true
+POLY_EXECUTION_MIN_BOOK_FILL_RATIO=1.0
+POLY_EXECUTION_ROLLBACK_ON_PARTIAL_FILL=true
+EXECUTION_ENTRY_MAX_SOURCE_AGE_MS=3000
+EXECUTION_ENTRY_IV_MAX_AGE_MS=90000
+EXECUTION_ENTRY_ML_MAX_AGE_MS=90000
+# Keep false to allow gate-based fallback if *_age_ms telemetry is temporarily missing.
+ENTRY_FRESHNESS_REQUIRE_AGE_FIELDS=false
 # Prefer non-resting order types for latency/arbitrage workflows.
 POLY_LIVE_ORDER_TYPE=FOK
 # Settlement/redeem worker (mainnet defaults from Polymarket docs)
@@ -71,6 +120,14 @@ POLY_SETTLEMENT_STALE_MS=3600000
 POLY_RPC_URL=https://polygon-rpc.com
 POLY_CONDITIONAL_TOKENS_ADDRESS=0x4D97DCd97eC945f40cF65F87097ACe5EA0476045
 POLY_COLLATERAL_TOKEN_ADDRESS=0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174
+POLY_COLLATERAL_DECIMALS=6
+LIVE_LEDGER_BOOT_CASH=0
+COLLATERAL_RECONCILIATION_ENABLED=true
+COLLATERAL_RECONCILIATION_INTERVAL_MS=60000
+COLLATERAL_RECONCILIATION_TOLERANCE_USD=2.0
+MODE_LEDGER_SNAPSHOT_PREFIX=sim_ledger:snapshot:
+MODE_LEDGER_DEFAULT_BANKROLL=1000
+SHUTDOWN_DRAIN_MS=4000
 # Optional: reset paper bankroll to default on backend boot.
 SIM_RESET_ON_BOOT=false
 # Optional: strategy variant tag for research comparisons.
@@ -90,7 +147,12 @@ SCANNER_OPTIONAL_HEARTBEAT_IDS=
 # Concentration + utilization controls (paper ledger)
 SIM_STRATEGY_CONCENTRATION_CAP_PCT=0.35
 SIM_FAMILY_CONCENTRATION_CAP_PCT=0.60
+SIM_UNDERLYING_CONCENTRATION_CAP_PCT=0.70
 SIM_GLOBAL_UTILIZATION_CAP_PCT=0.90
+SIM_BANKROLL_BOOTSTRAP_ON_MISS=false
+SIM_BANKROLL_BOOTSTRAP_VALUE=1000
+# Hard cap on total stacked risk overlays applied to strategy bet sizing.
+STRATEGY_OVERLAY_AGGREGATE_CAP=3.0
 
 # Realized PnL parity watchdog (ledger vs persisted paper trade log)
 LEDGER_PNL_PARITY_ENABLED=true
@@ -108,6 +170,7 @@ MODEL_PROBABILITY_GATE_REQUIRE_MODEL=false
 MODEL_PROBABILITY_GATE_DISABLE_ON_DRIFT=true
 MODEL_PROBABILITY_GATE_DRIFT_DISABLE_MS=900000
 MODEL_PROBABILITY_GATE_MAX_STALENESS_MS=5000
+MODEL_PROBABILITY_GATE_MIN_STRATEGY_LABELED_ROWS=1
 MODEL_PROBABILITY_GATE_TUNER_ENABLED=true
 MODEL_PROBABILITY_GATE_TUNER_ADVISORY_ONLY=false
 MODEL_PROBABILITY_GATE_TUNER_INTERVAL_MS=120000
@@ -115,7 +178,14 @@ MODEL_PROBABILITY_GATE_TUNER_LOOKBACK_MS=21600000
 MODEL_PROBABILITY_GATE_COUNTERFACTUAL_WINDOW_MS=600000
 MODEL_PROBABILITY_GATE_TUNER_MIN_SAMPLES=60
 MODEL_PROBABILITY_GATE_TUNER_STEP=0.01
-MODEL_PROBABILITY_GATE_TUNER_MAX_DRIFT=0.08
+MODEL_PROBABILITY_GATE_TUNER_MAX_DRIFT=0.03
+MODEL_PROBABILITY_GATE_TUNER_MIN_FLOOR=0.52
+MODEL_GATE_MIN_ROWS_FOR_ENFORCEMENT=80
+MODEL_GATE_MIN_CV_FOLDS_FOR_PAPER_ENFORCEMENT=2
+MODEL_GATE_MIN_CV_FOLDS_FOR_ENFORCEMENT=3
+MODEL_GATE_MIN_CV_AUC_FOR_ENFORCEMENT=0.52
+MODEL_GATE_MAX_CV_BRIER_FOR_ENFORCEMENT=0.28
+MODEL_GATE_MAX_CV_LOGLOSS_FOR_ENFORCEMENT=0.80
 MODEL_PREDICTION_TRACE_MAX=100000
 
 # In-process training cadence (no Python dependency in backend container)
@@ -136,6 +206,8 @@ ML_SIGNAL_RETRAIN_EVERY_SAMPLES=64
 ML_SIGNAL_MIN_RETRAIN_INTERVAL_MS=45000
 ML_SIGNAL_MIN_CLASS_SAMPLES=40
 ML_SIGNAL_EVAL_MIN_SAMPLES=80
+ML_MICROSTRUCTURE_MAX_AGE_MS=5000
+ML_MICROSTRUCTURE_BOOK_AGE_SCALE_MS=5000
 
 # BTC_5M model-signal gate (additional edge filter)
 BTC_5M_MODEL_SIGNAL_FILTER_ENABLED=true
@@ -148,15 +220,60 @@ BTC_5M_MODEL_SIGNAL_MAX_LOGLOSS=0.72
 BTC_5M_MODEL_SIGNAL_MAX_BRIER=0.28
 
 # BTC_5M latency + divergence + IV pricing
+BTC_5M_MIN_EXPECTED_NET_RETURN=0.008
+BTC_5M_MAX_POSITION_FRACTION=0.10
+BTC_5M_MAX_ENTRY_SPREAD=0.05
+BTC_5M_MAX_DRAWDOWN_PCT=-3.0
+BTC_5M_ENTRY_EXPIRY_CUTOFF_SECS=8
 BTC_5M_MAX_SPOT_AGE_MS=1200
 BTC_5M_MAX_BOOK_AGE_MS=900
 BTC_5M_LIVE_PREVIEW_COOLDOWN_MS=900
 BTC_5M_IV_BLEND_WEIGHT=0.65
 BTC_5M_IV_MAX_STALE_MS=90000
+BTC_5M_ML_FEATURE_MAX_STALE_MS=90000
 BTC_5M_DIVERGENCE_MIN_FLOOR=0.03
 BTC_5M_DIVERGENCE_SPREAD_MULT=0.40
 BTC_5M_DIVERGENCE_VOL_MULT=0.30
 BTC_5M_DIVERGENCE_UNCERTAINTY_BPS=12
+BTC_5M_FEE_CURVE_BASE_RATE=0.02
+BTC_5M_FAIR_PRICE_EXTRA_BPS=100
+BTC_5M_FAIR_PRICE_BAND=0.03
+BTC_5M_COINFLIP_BLOCK_BAND=0.03
+BTC_5M_KELLY_SCALE_FLOOR=0.20
+BTC_5M_EDGE_SCALE_TARGET_RATIO=1.25
+BTC_5M_EDGE_SCALE_FLOOR=0.40
+BTC_5M_EARLY_EXIT_ADVERSE_BPS=40
+BTC_5M_TAKE_PROFIT_MIN_RETURN=0.35
+BTC_5M_TAKE_PROFIT_MIN_BID=0.82
+BTC_5M_TAKE_PROFIT_MIN_HOLD_MS=30000
+BTC_5M_LIVE_ORDER_TYPE=FAK
+BTC_5M_THETA_SNIPER_ENABLED=true
+BTC_5M_THETA_SNIPER_WINDOW_SECS=60
+BTC_5M_THETA_SNIPER_MIN_DIVERGENCE_BPS=1200
+BTC_5M_THETA_SNIPER_MAX_BOOK_AGE_MS=500
+BTC_5M_THETA_SNIPER_SIZE_MULT=0.50
+BTC_5M_THETA_SNIPER_EXTRA_EDGE_BPS=40
+BTC_5M_MIN_TOP5_ASK_DEPTH_USD=60
+BTC_5M_MAKER_ENTRY_ENABLED=true
+BTC_5M_MAKER_ENTRY_MAX_EDGE_BPS=80
+BTC_5M_MAKER_ENTRY_MIN_TIME_REMAINING_SECS=120
+BTC_5M_MAKER_ENTRY_MIN_FILL_PROB=0.18
+BTC_5M_CEX_VOLUME_SIGNAL_ENABLED=true
+BTC_5M_CEX_VOLUME_MIN_VENUES=3
+BTC_5M_CEX_VOLUME_MIN_PRESSURE=0.10
+BTC_5M_CEX_VOLUME_MIN_ACTIVITY_RATIO=0.90
+BTC_5M_CEX_VOLUME_BONUS_BPS=35
+BTC_5M_CEX_VOLUME_PENALTY_BPS=45
+BTC_5M_DEPTH_SIGNAL_ENABLED=true
+BTC_5M_DEPTH_SIGNAL_BONUS_BPS=30
+BTC_5M_DEPTH_SIGNAL_PENALTY_BPS=35
+BTC_5M_MOMENTUM_FILTER_ENABLED=true
+BTC_5M_MOMENTUM_RSI_HIGH=72
+BTC_5M_MOMENTUM_RSI_LOW=28
+BTC_5M_MOMENTUM_PENALTY_BPS=80
+BTC_5M_REGIME_FILTER_ENABLED=true
+BTC_5M_REGIME_CHOP_PENALTY_BPS=50
+BTC_5M_SPREAD_QUALITY_PENALTY_BPS=60
 DERIBIT_IV_REFRESH_MS=10000
 DERIBIT_IV_HTTP_TIMEOUT_MS=4000
 DERIBIT_IV_MAX_SPOT_AGE_MS=15000
@@ -177,8 +294,34 @@ META_ALLOCATOR_ENABLED=true
 META_ALLOCATOR_META_BLEND=0.65
 META_ALLOCATOR_MIN_OVERLAY=0.55
 META_ALLOCATOR_MAX_OVERLAY=1.45
+META_ALLOCATOR_AGGREGATE_CAP=3.0
 META_ALLOCATOR_FAMILY_CONCENTRATION_SOFT_CAP=0.45
 META_ALLOCATOR_COST_DRAG_PENALTY_BPS=25
+IV_RV_DIVERGENCE_OVERLAY_ENABLED=true
+IV_RV_DIVERGENCE_HIGH_RATIO=1.35
+IV_RV_DIVERGENCE_LOW_RATIO=0.78
+IV_RV_DIVERGENCE_MAX_BOOST=1.15
+IV_RV_DIVERGENCE_MAX_PENALTY=0.85
+FUNDING_BASIS_OVERLAY_ENABLED=true
+FUNDING_BASIS_REFRESH_MS=30000
+FUNDING_BASIS_HTTP_TIMEOUT_MS=3500
+FUNDING_BASIS_SIGNAL_THRESHOLD_BPS=6.0
+FUNDING_BASIS_BASIS_WEIGHT=0.60
+FUNDING_BASIS_MAX_BOOST=1.12
+FUNDING_BASIS_MAX_PENALTY=0.88
+FUNDING_BASIS_STALE_MS=180000
+POLY_MICROSTRUCTURE_OVERLAY_ENABLED=true
+POLY_MICROSTRUCTURE_SIGNAL_TTL_MS=20000
+POLY_MICROSTRUCTURE_MIN_SHIFT_BPS=30
+POLY_MICROSTRUCTURE_MAX_SPREAD_BPS=450
+POLY_MICROSTRUCTURE_MAX_BOOST=1.10
+POLY_MICROSTRUCTURE_MAX_PENALTY=0.88
+CROSS_STRATEGY_CONFIRM_OVERLAY_ENABLED=true
+CROSS_STRATEGY_CONFIRM_MAX_AGE_MS=15000
+CROSS_STRATEGY_CONFIRM_OBI_MAX_BOOST=1.08
+CROSS_STRATEGY_CONFIRM_OBI_MAX_PENALTY=0.92
+CROSS_STRATEGY_CONFIRM_CEX_MAX_BOOST=1.06
+CROSS_STRATEGY_CONFIRM_CEX_MAX_PENALTY=0.94
 EXECUTION_SHORTFALL_OPTIMIZER_ENABLED=true
 EXECUTION_SHORTFALL_TARGET_RETAIN_BPS=18
 EXECUTION_SHORTFALL_MIN_RETAIN_BPS=2
@@ -187,7 +330,34 @@ EXECUTION_SHORTFALL_MIN_SIGNAL_NOTIONAL_USD=10
 EXECUTION_NETTING_ENABLED=true
 EXECUTION_NETTING_TTL_MS=1200000
 EXECUTION_NETTING_MARKET_CAP_USD=1200
+EXECUTION_NETTING_UNDERLYING_CAP_USD=2200
 EXECUTION_NETTING_OPPOSING_BLOCK_RATIO=0.85
+EXECUTION_ENTRY_JITTER_ENABLED=true
+EXECUTION_ENTRY_JITTER_DELAY_MIN_MS=100
+EXECUTION_ENTRY_JITTER_DELAY_MAX_MS=500
+EXECUTION_ENTRY_JITTER_SIZE_PCT=0.02
+EXECUTION_PREFLIGHT_TIMEOUT_MS=10000
+EXECUTION_LIVE_TIMEOUT_MS=10000
+EXECUTION_SETTLEMENT_TIMEOUT_MS=12000
+EXECUTION_SETTLEMENT_EMIT_TIMEOUT_MS=8000
+EXECUTION_SETTLEMENT_DLQ_TIMEOUT_MS=5000
+RISK_GUARD_INLINE_PRECHECK_ENABLED=true
+RISK_GUARD_INLINE_PRECHECK_MAX_AGE_MS=300000
+RISK_GUARD_TRAILING_STOP_PCT_ABS_CAP=200
+SCANNER_WS_READ_TIMEOUT_MS=45000
+SETTLEMENT_DLQ_REDIS_KEY=system:settlement:dlq:v1
+SETTLEMENT_DLQ_REPLAY_INTERVAL_MS=30000
+SETTLEMENT_DLQ_REPLAY_BATCH=25
+SETTLEMENT_DLQ_MAX_ATTEMPTS=8
+
+# External ops alerting (Telegram/webhook)
+OPS_ALERTING_ENABLED=false
+OPS_ALERT_MIN_SEVERITY=WARNING
+OPS_ALERT_COOLDOWN_MS=30000
+OPS_ALERT_HTTP_TIMEOUT_MS=6000
+OPS_ALERT_WEBHOOK_URLS=
+OPS_ALERT_TELEGRAM_BOT_TOKEN=
+OPS_ALERT_TELEGRAM_CHAT_ID=
 
 # Conservative rollout helpers (see config/live_canary_baseline.env)
 SOAK_MIN_PREFLIGHT_SAMPLES=20
@@ -198,3 +368,4 @@ SOAK_MIN_EDGE_CAPTURE_RATIO=0.55
 SOAK_MIN_NET_PNL_USD=0
 SOAK_MAX_REJECT_RATE_PCT=20
 SOAK_MAX_STALE_FORCED_CLOSES=0
+SOAK_MAX_NEGATIVE_TAKE_PROFIT_CLOSES=0
