--- a/apps/arb-scanner/Dockerfile
+++ b/apps/arb-scanner/Dockerfile
@@ -5,7 +5,9 @@ RUN apt-get update && apt-get install -y pkg-config libssl-dev && rm -rf /var/li
 
 # Development Stage (for cargo run)
 FROM base AS dev
-COPY . .
+RUN groupadd -g 1000 app && useradd -m -u 1000 -g app app
+COPY --chown=app:app . .
+USER app
 CMD ["cargo", "run"]
 
 # Builder Stage (for production)
@@ -17,4 +19,6 @@ RUN cargo install --path .
 FROM debian:bookworm-slim AS production
 RUN apt-get update && apt-get install -y libssl-dev ca-certificates && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /usr/local/cargo/bin/arb-scanner /usr/local/bin/arb-scanner
+RUN groupadd -g 10001 app && useradd -m -u 10001 -g app app
+USER app
 CMD ["arb-scanner"]
