--- a/apps/ml-service/Dockerfile
+++ b/apps/ml-service/Dockerfile
@@ -7,9 +7,18 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN groupadd -g 10001 app && useradd -m -u 10001 -g app app
 
-COPY . .
+COPY requirements.txt ./
+COPY requirements.lock.txt* ./
+RUN if [ -f requirements.lock.txt ]; then \
+      pip install --no-cache-dir -r requirements.lock.txt; \
+    else \
+      pip install --no-cache-dir -r requirements.txt; \
+    fi
+
+COPY --chown=app:app . .
+
+USER app
 
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8112"]
